--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 SESSION_SECRET=This is the secrect for the session
 PORT=6002
 MONGO_URI=mongodb+srv://Kanry:12345@paymentgatewaykanry.1w9gbot.mongodb.net/?retryWrites=true&w=majority
+REACT_APP_URL=http://localhost:3000
