--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,12 @@
     "express-flash": "0.0.2",
     "express-session": "^1.16.2",
     "method-override": "^3.0.0",
+    "mongoose": "^6.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "dotenv": "^8.0.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.4"
   }
 }
