--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
 SESSION_SECRET=This is the secrect for the session
 REACT_APP_API_URL=http://localhost:6002
+REACT_APP_AUTH_API_URL=http://localhost:4000
