--- a/client/jsconfig.paths.json
+++ b/client/jsconfig.paths.json
@@ -7,7 +7,10 @@
       "@navigation": ["src/components/navigation"],
       "@pages": ["src/components/pages"],
       "@products": ["src/components/products"],
-      "@authentication": ["src/components/authentication"] 
+      "@authentication": ["src/components/authentication"],
+      "@helpers": ["src/helpers"],
+      "@assets": ["src/assets"],
+      "@context": ["src/use-context"]
     }
   }
 }
