--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,11 @@
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-swipeable-views": "^0.14.0",
     "reactstrap": "^9.1.4",
     "recharts": "^2.1.15",
     "socket.io-client": "^4.5.3",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
