--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "session-manager": "^0.1.0",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "uniqid": "^5.4.0"
   }
 }
