--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,5 @@
 SESSION_SECRET=This is the secrect for the session
 REACT_APP_API_URL=http://localhost:6002
-REACT_APP_AUTH_API_URL=http://localhost:4000
+REACT_APP_AUTH_API_URL_PRODUCTION=kanry-payment.up.railway.app
+REACT_APP_AUTH_API_URL_DEVELOPMENT=http://localhost:4000
 REACT_APP_SOCKET_IO_URL=http://localhost:6001
