--- a/client/jsconfig.paths.json
+++ b/client/jsconfig.paths.json
@@ -11,7 +11,8 @@
       "@helpers": ["src/helpers"],
       "@assets": ["src/assets"],
       "@context": ["src/use-context"],
-      "@purchases": ["src/components/purchases"]
+      "@purchases": ["src/components/purchases"],
+      "@firebase": ["src/firebase"]
     }
   }
 }
