--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.23.6",
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
+    "firebase": "^8.3.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
