--- a/client/jsconfig.paths.json
+++ b/client/jsconfig.paths.json
@@ -12,7 +12,7 @@
       "@assets": ["src/assets"],
       "@context": ["src/use-context"],
       "@purchases": ["src/components/purchases"],
-      "@firebase": ["src/firebase"]
+      "@firebaseFolder": ["src/firebase"]
     }
   }
 }
