--- a/payment/package.json
+++ b/payment/package.json
@@ -4,7 +4,10 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^1.0.0",
     "@stripe/stripe-js": "^1.0.0",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "nodemon": "^2.0.20",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "^3.4.0",
@@ -17,7 +20,7 @@
   "proxy": "http://localhost:4242",
   "scripts": {
     "start-client": "react-scripts start",
-    "start-server": "node server.js",
+    "start-server": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
