--- a/payment/package.json
+++ b/payment/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start": "concurrently \"yarn start-client\" \"yarn start-server\""
+    "start": "nodemon server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
